--- a/scss/main.scss
+++ b/scss/main.scss
@@ -98,6 +98,7 @@
     right: 60px;
     z-index: 2;
     width: 50px;
+    transition: 1s;
     cursor: pointer;
 }
 
@@ -349,7 +350,12 @@
         display: block;
         width: 20px;
         margin: 0 auto 20px;
+        transition: 0.2s;
+        &:hover{
+            transform: translateY(-10px);
+        }
     }
+    
 }
 
 @import "responsive";
